# mindbuddy

./: .gitignore  FRONTEND_INSTRUCTIONS.md  README.md  main.py  package.json  pnpm-lock.yaml  profile.json  pyproject.toml  run_api.py  run_cli.py  setup_frontend.bat  tsconfig.base.json
apps/mobile/: App.tsx  README.md  app.json  babel.config.js  chainWrapper.ts  index.js  metro.config.js  package.json  tsconfig.json
apps/mobile/src/: App.tsx  README.md  index.ts  types.d.ts
apps/mobile/src/components/: ChatInput.tsx  ChatMessage.tsx
apps/mobile/src/screens/: SettingsScreen.tsx  ThreadsScreen.tsx
apps/mobile/src/theme/: colors.ts
apps/mobile/src/utils/: chainWrapper.ts
apps/web/: README.md  package.json  tsconfig.app.json  tsconfig.node.json
apps/web/public/: profile.json
apps/web/src/: App.tsx  init.ts  profileUtils.ts
cursor/rules/: testing_app.mdc
frontend/: .env.example  App.js  DEVICE_TESTING.md  PING_INSTRUCTIONS.md  app.config.js  index.js  package-lock.json  package.json  test-api.ps1
frontend/app/components/: MessageBubble.tsx
frontend/app/screens/: Chat.tsx  ConnectivityScreen.js  HomeScreen.js  SettingsScreen.js
frontend/scripts/: get-lan-ip.js  ping.mjs
frontend/src/utils/: api.js  api.ts
prompts/: conversation_styles.py  main_prompt.md  mindbuddy_template.py
src/mindbuddy/: __init__.py  api.py  cli.py  config.py  engine.py  utils.py
src/mindbuddy/prompts/: __init__.py  conversation_styles.py  mindbuddy_template.py
