[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindbuddy"
version = "0.1.0"
description = "A privacy-focused journaling buddy that helps users reflect on stress, habits, and moods"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "MindBuddy Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: News/Diary",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"} 